--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
@@ -48,6 +49,7 @@
     "jest": "^27.3.1",
     "mini-css-extract-plugin": "^2.4.2",
     "nodemon": "^2.0.13",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
